--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "darkaonline/l5-swagger": "^8.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.7",
         "intervention/validation": "^3.0",
         "laravel/framework": "^8.75",
+        "laravel/passport": "^10.3",
         "laravel/sanctum": "^2.11",
         "laravel/telescope": "^4.7",
         "laravel/tinker": "^2.5",
